--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="#" class="blog-btn">Learn More</a>
+                <a href="./blog.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -34,7 +34,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="#" class="blog-btn">Learn More</a>
+                <a href="./blog.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -42,7 +42,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="#" class="blog-btn">Learn More</a>
+                <a href="./blog.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -50,9 +50,14 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="#" class="blog-btn">Learn More</a>
+                <a href="./blog.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
     </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 PhotoMasters. Tous droits réservés.</p>
+        </div>
+    </footer>
 </body>
 </html>
