--- a/contact.html
+++ b/contact.html
@@ -37,5 +37,10 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 PhotoMasters. Tous droits réservés.</p>
+        </div>
+    </footer>
 </body>
 </html>
