--- a/services.html
+++ b/services.html
@@ -42,5 +42,10 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 PhotoMasters. Tous droits réservés.</p>
+        </div>
+    </footer>
 </body>
 </html>
