--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="./blog.html" class="blog-btn">Learn More</a>
+                <a href="./blog1.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -34,7 +34,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="./blog.html" class="blog-btn">Learn More</a>
+                <a href="./blog2.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -42,7 +42,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="./blog.html" class="blog-btn">Learn More</a>
+                <a href="./blog3.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
         <figure>
@@ -50,7 +50,7 @@
             <div>
                 <h4>The Morocco Nature</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptates provident tempore autem soluta.</p>
-                <a href="./blog.html" class="blog-btn">Learn More</a>
+                <a href="./blog4.html" class="blog-btn">Learn More</a>
             </div>
         </figure>
     </section>
